--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
-    "xterm":"2.2.3"
+    "xterm": "2.2.3",
+    "node-pty": "0.6.1"
   }
 }
